update readme and fix footer alignment

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -366,7 +366,7 @@
 		}
 		@include mq(md) {
 			> div:last-child {
-				justify-content: end;
+				justify-content: flex-end;
 			}
 		}
 
